# nested-mapping

./: .flake8  .gitlab-ci.yml  CHANGELOG.md  README.md  pyproject.toml
multikeydict/: nestedmkdict.py
nestedmapping/: __init__.py  flatmapping.py  nestedmapping.py  nestedmappingaccess.py  visitor.py
nestedmapping/tools/: filter.py  map.py
src/: nested_mapping
src/nested_mapping/tools/: map.py  match.py
src/nestedmapping/: __init__.py  nested_mapping.py
src/nestedmapping/tools/: filter.py  map.py
tests/: test_flatmapping.py  test_map.py  test_nested_mapping.py  test_nested_mapping_update.py  test_nestedmapping.py  test_nestedmapping_flatmapping.py  test_nestedmapping_update.py  test_nestedmkdict.py  test_visitor.py
