[project]
name = "nestedmapping"
version = "0.10.0"
description = "The package to work with nested dictionaries supporing list/set as keys"
authors = [
    {name = "Gonchar Maxim", email = "gonchar@jinr.ru"},
    {name = "Tsegelnik Nikita", email = "tsegelnik@jinr.ru"},
    {name = "Vitalii Zavadskyi", email= "zavadskiy.vs@phystech.edu"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "ordered-set (>=4.1.0,<5.0.0)"
]

[project.urls]
homepage = "https://github.com/dagflow-team/nestedmapping"
repository = "https://github.com/dagflow-team/nestedmapping"
documentation = "https://github.com/dagflow-team/nestedmapping/wiki"
"Bug Tracker" = "https://github.com/dagflow-team/nestedmapping/issues"

[tool.poetry]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
