[project]
name = "nested_mapping"
version = "0.10.0"
description = "The package to work with nested dictionaries supporing list/set as keys"
# TODO: заменить на организацию
authors = [
  { name = "Gonchar Maxim", email = "gonchar@jinr.ru" },
  { name = "Vitalii Zavadskyi", email = "zavadskiy.vs@phystech.edu" },
  { name = "Tsegelnik Nikita", email = "tsegelnik@jinr.ru" },
]
maintainers = [
  { name = "Gonchar Maxim", email = "gonchar@jinr.ru" },
  { name = "Vitalii Zavadskyi", email = "zavadskiy.vs@phystech.edu" },
  { name = "Tsegelnik Nikita", email = "tsegelnik@jinr.ru" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy", "ordered-set"]

[project.urls]
homepage = "https://github.com/dagflow-team/nested_mapping"
repository = "https://github.com/dagflow-team/nested_mapping"
documentation = "https://github.com/dagflow-team/nested_mapping/wiki"
"Bug Tracker" = "https://github.com/dagflow-team/nested_mapping/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "coverage"]

[build-system]
requires = ["setuptools", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
#exclude = ["tests*", "docs*"]  # Исключает целые папки при необходимости
