[build-system]
build-backend = "setuptools.build_meta"

requires = [ "packaging", "setuptools", "wheel" ]

[project]
name = "nested-mapping"
version = "0.10.2"
description = "The package to work with nested dictionaries supporing list/set as keys"
readme = "README.md"
license = "MIT"
maintainers = [ { name = "DAGModelling Team", email = "dagflow@jinr.ru" } ]
authors = [ { name = "DAGModelling Team", email = "dagflow@jinr.ru" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [ "numpy", "ordered-set" ]

optional-dependencies.dev = [ "coverage", "pytest", "pytest-cov" ]
urls."Bug Tracker" = "https://github.com/dagflow-team/nested-mapping/issues"
urls.documentation = "https://github.com/dagflow-team/nested-mapping/wiki"
urls.homepage = "https://github.com/dagflow-team/nested-mapping"
urls.repository = "https://github.com/dagflow-team/nested-mapping"

[tool.setuptools.packages.find]
where = [ "src" ]
#exclude = ["tests*", "docs*"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 5

[tool.black]
line-length = 100
